# OpenStrength

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  SOW.md  TODO.md  pyproject.toml  requirements.txt
configs/eval/: grid.yaml
configs/index/: faiss.yaml
configs/ingest/: licenses.yaml  pmc.yaml  sources.yaml
configs/rag/: prompt.yaml  retrieval.yaml
configs/train/: lora.yaml
src/openstrength/chunk/: run.py
src/openstrength/embed/: run.py
src/openstrength/export/: excel.py
src/openstrength/index/: build.py
src/openstrength/ingest/: arxiv.py  biorxiv.py  core_api.py  doaj.py  figshare.py  govcrawl.py  oai_pmh.py  pmc.py  run.py  unpaywall.py  utils_net.py  zenodo.py
src/openstrength/normalize/: run.py  schema.py
src/openstrength/parse/: run.py
src/openstrength/rag/: pipeline.py
src/openstrength/serve/: api.py
src/openstrength/utils/: io.py  licenses.py  logging.py
tests/: test_utils_io.py
