[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openstrength"
version = "0.1.0"
description = "OpenStrength: evidence-grounded fitness & nutrition planning assistant (RAG + optional LoRA) with Excel/CSV export."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Jainil Modi", email = "mjainil1201@gmail.com" }
]
license = { text = "MIT" }
keywords = ["fitness", "nutrition", "RAG", "LLM", "workout-plan", "excel", "retrieval", "LoRA"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Information Analysis"
]

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "orjson>=3.10.0",
  "requests>=2.32.0",
  "httpx>=0.27.0",
  "tenacity>=8.2.0",

  # Data + parsing
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "lxml>=5.2.0",
  "trafilatura>=1.8.0",
  "pdfminer.six>=20231228",
  "PyPDF2>=3.0.1",
  "beautifulsoup4>=4.12.0",

  # NLP / RAG stack
  "transformers>=4.40.0",
  "accelerate>=0.29.0",
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0",
  "datasketch>=1.6.5",
  "spacy>=3.7.0",
  "jsonschema>=4.22.0",

  # Optional fine-tune
  "peft>=0.11.0",
  "trl>=0.9.4",
  "bitsandbytes>=0.43.0; platform_system == 'Linux'",

  # Excel export
  "openpyxl>=3.1.2",
  "xlsxwriter>=3.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "ruff>=0.4.7",
  "black>=24.4.0",
  "isort>=5.13.2",
  "pre-commit>=3.7.0",
  "pip-tools>=7.4.0"
]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = """
/(
  \\.venv
  | build
  | dist
  | artifacts
  | data
)/
"""

[tool.isort]
profile = "black"
line_length = 100
known_third_party = ["fastapi", "pandas", "numpy", "transformers", "faiss", "spacy", "sentence_transformers"]
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-select = ["I", "F", "E", "W", "B", "UP"]
ignore = [
  "E203",  # whitespace before ':' (handled by Black)
  "E501"   # line length (Black manages it; Ruff enforces via config)
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = "(^\\.?venv/|^build/|^dist/|^artifacts/|^data/)"
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["openstrength*"]
